				timeout. Each one of these uses a worker thread from the .NET thread pool.  This
				thread pool only has a default of 25 threads so on a very heavily loaded system,
				it's possible it could run out.  Connect has now been recoded to not use a 
				worker thread.
					
	Bug #11542  Call to Stored Procedure throws exception when SP has no arguments [fixed]
							
1-20-05 - Version 1.0.4  

	Bug #7243 calling prepare causing exception [fixed]
	Fixed another small problem with prepared statements
	Bug #7258  	MySqlCommand.Connection returns an IDbConnection [fixed]
	Bug #7345  	MySqlAdapter.Fill method throws Error message : Non-negative number required [fixed]
	Bug #7478   Clone method bug in MySqlCommand [fixed]
	Bug #7612  	MySqlDataReader.GetString(index) returns non-Null value when field is Null [fixed]
	Bug #7755	MySqlReader.GetInt32 throws exception if column is unsigned [fixed]
	Bug #7704	GetBytes is working no more [fixed]
	Bug #7724	Quote character \222 not quoted in EscapeString [fixed]
	Fixed problem that causes named pipes to not work with some blob functionality
	Fixed problem with shared memory connections
	Bug #7436  	Problem with Multiple resultsets... [fixed]
	Added or filled out several more topics in the API reference documentation
	
12-10-04 - Version 1.0.3-gamma

	- Made MySQL the default named pipe name
	- Now SHOW COLLATION is used upon connection to retrieve the full list of charset ids
	- Fixed Invalid character set index: 200 (Bug #6547)
	- Installer now includes options to install into GAC and create Start Menu items
	- Bug #6863 - Int64 Support in MySqlCommand Parameters [fixed]
	- Connections now do not have to give a database on the connection string
	- Bug #6770 - MySqlDataReader.GetChar(int i) throws IndexOutOfRange Exception [fixed]
	- Fixed problem where multiple resultsets having different numbers of columns would cause a problem
	- Bug #6983 Exception stack trace lost when re-throwing exceptions [fixed]