@@ -60,7 +60,7 @@ namespace MySql.Data.Types
 			}
 			else 
 			{
-				writer.WriteLenString( v.ToString(numberFormat) );
+				writer.WriteStringNoNull(v.ToString(numberFormat));
 			}
 		}
 
